Refactor dependency injection and add tagged db (not working)